appgw-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: appgw-ingress
spec:
  ingressClassName: azure-application-gateway
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: your-service-1
            port:
              number: 80
      - path: /service-2
        pathType: Prefix
        backend:
          service:
            name: your-service-2
            port:
              number: 3000
      - path: /service-3
        pathType: Prefix
        backend:
          service:
            name: your-service-3
            port:
              number: 3002
